helm-deployment/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drones-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: http://aa75e59c5b52245f78bca84a87c33713-1730258908.us-east-1.elb.amazonaws.com/
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drones-app-helm-deployment
                port:
                  number: 4000
